--- a/CSS/style.css
+++ b/CSS/style.css
@@ -55,7 +55,7 @@ a:hover {
 }
 
 .container-pt-4 {
-  background-color: lightgrey;
+  background-color: #f2f2f2;
 }
 
 /* Styling a footer */
@@ -116,95 +116,82 @@ a:hover {
 }
 
 
- /* Styling Contac Us Form */ 
+ /* Styling Contac Us Form  */
 
- form {
-   /* To center the form on the page */
-   margin: 0 auto;
-   width: 500px;
-   /* To see the outline of the form */
-   padding: 1em;
-   border: 2px solid #CCC;
-   border-radius: .5em;
- }
-
-  input, textarea {
-   /* To make all text fields have the same font settings */
-   font: 1em sans-serif;
-
-   /* To give the same size to all textfields */
-   width: 100%;
-   box-sizing: border-box;
-
-   /* To harmonize the look & feel of text field border */
-   border: 1px solid lightgray;
- }
-
- input:focus, textarea:focus {
-  /* To give a little highlight on active elements */
-  border-color: #000;
-}  
-
-textarea {
-  /* To properly align multiline text fields with their labels */
-  vertical-align: top;
-
-  /* To give enough room to type some text */
-  height: 5em;
+ /* Style inputs, select elements and textareas */
+input[type=text], select, textarea{
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  resize: vertical;
 }
 
- label {
-   /* To make sure that all labels have the same size and are properly aligned */
-   font-weight: bold;
-   display: inline-block; 
-   text-align: right;
-   padding: 10px;
- }
+/* Style the label to display next to the inputs */
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
 
- .button {
-  /* To position the buttons to the same position of the text fields */
-  padding-left: 20px;
-  padding-right: 20px;
+/* Style the submit button */
+#contact-button {
+  background-color: #007bff;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
   cursor: pointer;
-  font-size: .800em;
-  font-weight: 400;
+  float: right;
   text-transform: uppercase;
 }
 
-/* button {
-  /* This extra margin represent roughly the same space as the space
-     between the labels and their text fields */
-  margin-left: 8em;
-} */
+/* Style the container */
+.container-contact {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
 
- .number {
-   font-weight: bold;
-   color: grey;
- }
+/* Floating column for labels: 25% width */
+.col-25 {
+  float: left;
+  width: 25%;
+  margin-top: 6px;
+}
 
- #container {
-   margin: auto;
-   max-width: 500px;
-   border-radius: 5px;   
+/* Floating column for inputs: 75% width */
+.col-75 {
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
+/* Clear floats after the columns */
+.row-contact:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 540px) {
+  .col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
   }
-
+}
    /* Styling About Us page */
 
-   .about {
-     text-indent: 50px;
+   .about-div {     
+     background-color: #f2f2f2;
    }
 
    .about-picture {
      float: left;
      padding: 10px;
-     /* border-radius: 10px; */
+     border-radius: 10px;
    }
-
-   .about-column {
-    float: left;
-    width: 70%;
-    padding: 10px;   
-}
 
 .address-column {
   float: right;
@@ -212,16 +199,22 @@ textarea {
   padding: 10px; 
 }
 
-.history, .our-chief, .team {
-  text-indent: 50px;
+h2 {
+  text-align: center;
 }
 
-.chief-column {
+.history, .our-chief, .team { 
+  padding-left: 30px;
+  padding-right: 10px;
+  text-indent:  50px;
+}
+
+/* .chief-column {
   float: left;
   width: 50%;
   margin-bottom: 16px;
   padding: 0 8px;
-}
+} */
 
 .team-column {
   padding: 10px;
@@ -289,7 +282,98 @@ textarea {
     clear: both;
 }
 
+/* Styling APPLY FORM */
+.modal-body {
+  background-color: #f2f2f2;
+}
+
    /* Styling Carousel Page */
+  
+  /* Position the image container (needed to position the left and right arrows) */
+  .gallery-container {
+    position: relative;
+    width: 40%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  /* Hide the images by default */
+  .mySlides {
+    display: none;
+  }
+  
+  /* Add a pointer when hovering over the thumbnail images */
+  .cursor {
+    cursor: pointer;
+  }
+  
+  /* Next & previous buttons */
+  .prev,
+  .next {
+    cursor: pointer;
+    position: absolute;
+    top: 40%;
+    width: auto;
+    padding: 16px;
+    margin-top: -50px;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover,
+  .next:hover {
+    background-color: rgba(0, 0, 0, 0.507);
+  }
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  
+  /* Container for image text */
+  .caption-container {
+    text-align: center;
+    background-color: #222;
+    padding: 2px 16px;
+    color: white;
+  }
+  
+  .gallery-row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Six columns side by side */
+  .gallery-column {
+    float: left;
+    width: 16.66%;
+  }
+  
+  /* Add a transparency effect for thumnbail images */
+  .demo {
+    opacity: 0.6;
+  }
+  
+  .active,
+  .demo:hover {
+    opacity: 1;
+  }
  
 
 
@@ -330,5 +414,16 @@ textarea {
       display: block;
       flex-direction: column;
       width: 100%;
+    }
+
+    .header {
+      background-color: lightblue;
+    }
+
+    .address-column {
+     display: flex;
+     flex-direction: row;
+     flex-wrap: wrap;
+
     }
 }
