--- a/CSS/style.css
+++ b/CSS/style.css
@@ -53,10 +53,9 @@ a:hover {
   color: grey;
 }
 
-.active, nav a:hover {  
-  color: #dea227;
+.active, .nav-link a:hover {
   background-color: #f1f1f1;
-  border-radius: 10px;
+  border-radius: 30px;
   padding: 5px;
 }
 
@@ -69,7 +68,7 @@ a:hover {
 }
 
 .container-pt-4 {
-  background-color: #f2f2f2;
+  background-color: #f2f2f2; 
 }
 
 /* Styling a footer */
@@ -197,15 +196,15 @@ label {
 }
    /* Styling About Us page */
 
-   .about-div {     
-     background-color: #f2f2f2;
-   }
+.about-div {     
+  background-color: #f2f2f2;
+}
 
-   .about-picture {
-     float: left;
-     padding: 10px;
-     border-radius: 10px;
-   }
+.about-picture {
+  float: left;
+  padding: 10px;
+  border-radius: 10px;
+}
 
 .address-column {
   float: right;
@@ -223,13 +222,6 @@ h2 {
   text-align: justify;
 }
 
-
-/* .chief-column {
-  float: left;
-  width: 50%;
-  margin-bottom: 16px;
-  padding: 0 8px;
-} */
 
 .team-column {
   padding: 10px;
@@ -275,20 +267,6 @@ h2 {
 .button:hover {
   background-color: #555;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* Clear floats after the columns */
 .about-row:after {
@@ -353,8 +331,8 @@ h2 {
   
   /* Number text (1/3 etc) */
   .numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
+    color: black;
+    font-size: 15px;
     padding: 8px 12px;
     position: absolute;
     top: 0;
